--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "This is Huémac's personal site TEST"
 theme = "ananke"
+publishDir = "docs"
