--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://huem.ac/"
 languageCode = "en-us"
 title = "This is Huémac's personal site TEST"
 theme = "ananke"
-publishDir = "docs"
